[gd_scene load_steps=18 format=3 uid="uid://b8v0yk7xp3b41"]

[ext_resource type="Texture2D" uid="uid://1hp55p7s8frj" path="res://inventory_and_int_puzzle/texture/rect.png" id="1_1cxyw"]
[ext_resource type="Script" uid="uid://dkadoikkay6u7" path="res://inventory_and_int_puzzle/puzzle_number.gd" id="1_tpxuo"]
[ext_resource type="Texture2D" uid="uid://cr53hmihvw3lm" path="res://inventory_and_int_puzzle/texture/rect_3.png" id="2_a1hkd"]
[ext_resource type="Texture2D" uid="uid://b81yhe7uo4jyw" path="res://inventory_and_int_puzzle/texture/arrow_up.png" id="3_rl4o0"]
[ext_resource type="Texture2D" uid="uid://c8brb1rr5ruuq" path="res://inventory_and_int_puzzle/texture/number_box.png" id="4_tpxuo"]
[ext_resource type="Texture2D" uid="uid://dmr5v6480mcf6" path="res://inventory_and_int_puzzle/texture/arrow_down.png" id="5_nee4y"]
[ext_resource type="FontFile" uid="uid://q2fhh8urj10q" path="res://inventory_and_int_puzzle/font/superstarorig_memesbruh03.ttf" id="6_a1hkd"]
[ext_resource type="FontFile" uid="uid://c1rqv5cvsoxf0" path="res://inventory_and_int_puzzle/font/pf_tempesta_seven_bold.ttf" id="7_nee4y"]
[ext_resource type="Texture2D" uid="uid://pk1dftme3hj2" path="res://inventory_and_int_puzzle/texture/icon_enter.png" id="9_0ab5n"]
[ext_resource type="Texture2D" uid="uid://c5gyxeoepy4y0" path="res://inventory_and_int_puzzle/texture/icon_esc.png" id="10_8t3kw"]

[sub_resource type="Animation" id="Animation_nee4y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control2/TextureRect3:offset_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/TextureRect2:offset_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="Animation" id="Animation_tpxuo"]
resource_name = "down_hit"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control2/TextureRect3:offset_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.0, 0.0]
}

[sub_resource type="Animation" id="Animation_0ab5n"]
resource_name = "up_hit"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/TextureRect2:offset_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.0, 0.0, 2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8t3kw"]
_data = {
&"RESET": SubResource("Animation_nee4y"),
&"down_hit": SubResource("Animation_tpxuo"),
&"up_hit": SubResource("Animation_0ab5n")
}

[sub_resource type="LabelSettings" id="LabelSettings_0ab5n"]
font = ExtResource("7_nee4y")
font_size = 6
font_color = Color(0.494118, 0.533333, 0.564706, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rl4o0"]
font = ExtResource("6_a1hkd")
font_color = Color(0.494118, 0.533333, 0.564706, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5tus3"]
line_spacing = 0.0
font = ExtResource("7_nee4y")
font_size = 4
outline_size = 4
outline_color = Color(0.231373, 0.203922, 0.337255, 1)

[node name="puzzle_number" type="CanvasLayer"]
script = ExtResource("1_tpxuo")
metadata/_edit_horizontal_guides_ = [124.0]

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(171, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -50.0
offset_right = 85.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1cxyw")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="NinePatchRect"]
custom_minimum_size = Vector2(148, 76)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -38.0
offset_right = 74.5
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_a1hkd")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/NinePatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="NinePatchRect/NinePatchRect2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Control" type="Control" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(28, 6)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer/Control"]
modulate = Color(0.231373, 0.203922, 0.337255, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rl4o0")
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_tpxuo")
stretch_mode = 3

[node name="Control2" type="Control" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(28, 6)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer/Control2"]
modulate = Color(0.231373, 0.203922, 0.337255, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_nee4y")
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer"]
libraries = {
&"": SubResource("AnimationLibrary_8t3kw")
}

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Control" type="Control" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(28, 6)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer2/Control"]
modulate = Color(0.231373, 0.203922, 0.337255, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rl4o0")
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("4_tpxuo")
stretch_mode = 3

[node name="Control2" type="Control" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(28, 6)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer2/Control2"]
modulate = Color(0.231373, 0.203922, 0.337255, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_nee4y")
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer2"]
libraries = {
&"": SubResource("AnimationLibrary_8t3kw")
}

[node name="VBoxContainer3" type="VBoxContainer" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Control" type="Control" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(28, 6)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer3/Control"]
modulate = Color(0.231373, 0.203922, 0.337255, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rl4o0")
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
texture = ExtResource("4_tpxuo")
stretch_mode = 3

[node name="Control2" type="Control" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(28, 6)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer3/Control2"]
modulate = Color(0.231373, 0.203922, 0.337255, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_nee4y")
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer3"]
libraries = {
&"": SubResource("AnimationLibrary_8t3kw")
}

[node name="VBoxContainer4" type="VBoxContainer" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Control" type="Control" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(28, 6)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer4/Control"]
modulate = Color(0.231373, 0.203922, 0.337255, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rl4o0")
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
texture = ExtResource("4_tpxuo")
stretch_mode = 3

[node name="Control2" type="Control" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer4"]
custom_minimum_size = Vector2(28, 6)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer4/Control2"]
modulate = Color(0.231373, 0.203922, 0.337255, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_nee4y")
stretch_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="NinePatchRect/NinePatchRect2/HBoxContainer/VBoxContainer/VBoxContainer4"]
libraries = {
&"": SubResource("AnimationLibrary_8t3kw")
}

[node name="VBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -7.0
offset_right = -10.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"
label_settings = SubResource("LabelSettings_0ab5n")

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"
label_settings = SubResource("LabelSettings_0ab5n")

[node name="Label3" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"
label_settings = SubResource("LabelSettings_0ab5n")

[node name="Label4" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"
label_settings = SubResource("LabelSettings_0ab5n")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 71.0
offset_top = 59.0
offset_right = 168.0
offset_bottom = 77.0
color = Color(0.0941176, 0.0705882, 0.117647, 1)

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -7.0
offset_right = 46.5
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
text = "Numbers Lock"
label_settings = SubResource("LabelSettings_rl4o0")

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -18.0
offset_right = -5.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer5"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer5/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("9_0ab5n")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer5/HBoxContainer2"]
layout_mode = 2
text = "Submit"
label_settings = SubResource("LabelSettings_5tus3")

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer5"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer5/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("10_8t3kw")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer5/HBoxContainer3"]
layout_mode = 2
text = "Back"
label_settings = SubResource("LabelSettings_5tus3")
